Objects/Employee__c/fields/Orders_Awaiting__c.field-meta.xml
<CustomField>
    <fullName>Orders_Awaiting__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Orders Awaiting</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>