Objects/Employee__c/fields/Orders_Completed__c.field-meta.xml
<CustomField>
    <fullName>Orders_Completed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Orders Completed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>