Objects/Employee__c/fields/Orders_In_the_process__c.field-meta.xml
<CustomField>
    <fullName>Orders_In_the_process__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Orders In the process</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>